@@ -1,57 +1,67 @@
 package tcc.conexao_alimentar.service;
 
+import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
 import lombok.RequiredArgsConstructor;
 import tcc.conexao_alimentar.DTO.AvaliacaoRequestDTO;
 import tcc.conexao_alimentar.DTO.AvaliacaoResponseDTO;
+import tcc.conexao_alimentar.enums.TipoUsuario;
+import tcc.conexao_alimentar.exception.RegraDeNegocioException;
 import tcc.conexao_alimentar.mapper.AvaliacaoMapper;
 import tcc.conexao_alimentar.model.AvaliacaoModel;
+import tcc.conexao_alimentar.model.ReservaModel;
 import tcc.conexao_alimentar.model.UsuarioModel;
 import tcc.conexao_alimentar.repository.AvaliacaoRepository;
+import tcc.conexao_alimentar.repository.ReservaRepository;
 import tcc.conexao_alimentar.repository.UsuarioRepository;
-
 @Service
 @RequiredArgsConstructor
 public class AvaliacaoService {
     private final AvaliacaoRepository avaliacaoRepository;
     private final UsuarioRepository usuarioRepository;
+    private final ReservaRepository reservaRepository;
 
-    public AvaliacaoResponseDTO avaliar(Long avaliadoId, AvaliacaoRequestDTO dto) {
-        UsuarioModel avaliador = obterUsuarioLogado();
+    public AvaliacaoResponseDTO avaliarPorReserva(Long reservaId, AvaliacaoRequestDTO dto) {
+        ReservaModel reserva = reservaRepository.findById(reservaId)
+            .orElseThrow(() -> new RegraDeNegocioException("Reserva não encontrada."));
 
-        UsuarioModel avaliado = usuarioRepository.findById(avaliadoId).orElseThrow(() -> new RuntimeException("Avaliado não encontrado"));
+        UsuarioModel avaliador = usuarioRepository.findByEmail(
+            SecurityContextHolder.getContext().getAuthentication().getName()
+        ).orElseThrow(() -> new RegraDeNegocioException("Usuário não encontrado."));
 
-        AvaliacaoModel avaliacao = AvaliacaoMapper.toEntity(dto, avaliador, avaliado);
+        UsuarioModel avaliado;
+
+        if (avaliador.getTipoUsuario() == TipoUsuario.ONG) {
+            avaliado = reserva.getDoacao().getDoador();
+            reserva.setAvaliacaoFeitaPeloReceptor(true);
+        } else if (avaliador.getTipoUsuario() == TipoUsuario.COMERCIO) {
+            avaliado = reserva.getReceptor();
+            reserva.setAvaliacaoFeitaPeloDoador(true);
+        } else {
+            throw new RegraDeNegocioException("Tipo de usuário não pode fazer avaliação.");
+        }
+
+        AvaliacaoModel avaliacao = new AvaliacaoModel();
+        avaliacao.setAvaliador(avaliador);
+        avaliacao.setAvaliado(avaliado);
+        avaliacao.setNota(dto.getNota());
+        avaliacao.setComentario(dto.getComentario());
+        avaliacao.setDataCriacao(LocalDateTime.now());
+
+        reservaRepository.save(reserva);
         avaliacaoRepository.save(avaliacao);
 
         return AvaliacaoMapper.toResponse(avaliacao);
     }
 
     public List<AvaliacaoResponseDTO> listarAvaliacoesDoUsuario(Long avaliadoId) {
-        return avaliacaoRepository.findByAvaliadoId(avaliadoId).stream()
-                .map(AvaliacaoMapper::toResponse)
-                .collect(Collectors.toList());
+        return avaliacaoRepository.findByAvaliadoId(avaliadoId)
+            .stream()
+            .map(AvaliacaoMapper::toResponse)
+            .toList();
     }
-    private UsuarioModel obterUsuarioLogado() {
-    Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-
-    if (authentication == null || !authentication.isAuthenticated() || "anonymousUser".equals(authentication.getPrincipal())) {
-        throw new RuntimeException("Usuário logado não encontrado");
-    }
-
-    String email = authentication.getName();
-
-    return usuarioRepository.findByEmail(email)
-        .orElseThrow(() -> {
-            return new RuntimeException("Usuário logado não encontrado");
-        });
-}
-
-
 }
